--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -1,106 +1,110 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="initial-scale=1">
-   <title>MSU Denver - Reimagine Possible</title>
-   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/6990192/css/fonts.css" />
-   <script src="https://kit.fontawesome.com/7d379a052d.js"></script>
-   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1">
+  <title>MSU Denver - Reimagine Possible</title>
+  <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/6990192/css/fonts.css" />
+  <script src="https://kit.fontawesome.com/7d379a052d.js"></script>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="style-assets/css/possible.css" />
 </head>
 
-    <body>
-
-
-      <section class="introduction">
-      <div class="container">
-
+<body>
+  <section class="introduction">
+    <div class="container">
+      <div class="row">
         <div class="col-xs-12">
-            <h1>Reimagine <span class="possible-word fade-in">possible</span></h1>
-          </div>
-            <div class="col-xs-12 col-sm-6 offset-sm-6 col-md-3 offset-md-8">
-            <img class="img-responsive university-logo fade-in" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
-          </div>
-          <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span>
-      </div>
-      </section>
-      <section class="start_your_possible">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12 col-md-8 offset-md-4">
-            <h2>What would you do if anything were <span class="possible-word-reversed">possible</span>?</h2>
-          </div>
-          <div class="col-xs-12 col-md-8 offset-md-4">
-            <p>Imagine a place where barriers are removed, opportunities are plentiful, labels are non-existent and an entire community of peers, mentors, educators, and industry leaders are ready to support you, encourage you and connect with you.</p>
-          </div>
-          </div>
+          <h1>Reimagine <span class="possible-word fade-in">possible</span></h1>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+          <img class="img-responsive university-logo fade-in hidden-sm" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
         </div>
 
-      </section>
+        <div class="col-xs-12 col-sm-4 offset-col-sm-4 text-center">
+          <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="start_your_possible">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 offset-md-4">
+          <h2>What would you do if anything were <span class="possible-word-reversed">possible</span>?</h2>
+        </div>
+        <div class="col-xs-12 col-md-8 offset-md-4">
+          <p>Imagine a place where barriers are removed, opportunities are plentiful, labels are non-existent and an entire community of peers, mentors, educators, and industry leaders are ready to support you, encourage you and connect with you.</p>
+        </div>
+      </div>
+    </div>
 
-<section class="section-feels-like">
-<div class="container">
-  <h2 style="margin-bottom:30px;">At MSU Denver, that’s what it feels like to reimagine what’s <span class="possible-word">possible</span> in higher
-      education.</h2>
-  <div class="row">
-          <div class="col-6" >
-                <p>We offer a dynamic urban setting, and an incredible network of organizations
-                who partner with us, offer internships, and recruit
-                our graduates. We have degrees in sought-after
-                fields and we’re leading the way across all areas
-                of study in excellence, innovation and opportunity.
-                You can even create your own degree, based on
-                your unique passions.
-                In the months ahead, visit this page to read our
-                stories, be inspired, and imagine what could be
-                possible for your future.</p>
-          </div>
-          <div class="col-6" >
-<img class="img-thumbnail" src="style-assets/media/possible/pride.jpg">
+  </section>
 
-          </div>
-</div>
+  <section class="section-feels-like">
+    <div class="container">
+      <h2 style="margin-bottom:30px;">At MSU Denver, that’s what it feels like to reimagine what’s <span class="possible-word">possible</span> in higher
+        education.</h2>
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
+          <p>We offer a dynamic urban setting, and an incredible network of organizations
+            who partner with us, offer internships, and recruit
+            our graduates. We have degrees in sought-after
+            fields and we’re leading the way across all areas
+            of study in excellence, innovation and opportunity.
+            You can even create your own degree, based on
+            your unique passions.
+            In the months ahead, visit this page to read our
+            stories, be inspired, and imagine what could be
+            possible for your future.</p>
+        </div>
+        <div class="col-xs-12 col-md-6">
+          <img class="img-thumbnail" src="style-assets/media/possible/pride.jpg">
+        </div>
+      </div>
+    </div>
+  </section>
 
 
-          </div>
-</section>
+  <section class="possible-call-to-action">
+    <div class="col-xs-12 col-md-10 offset-md-1 well">
+      <h2>Start your <span class="possible-word">possible</span></h2>
+      <p>
+        MSU Denver is where classes lead to careers
+        and learners connect with leaders. Our
+        campus is diverse and welcoming, filled with
+        learners in undergraduate and masters’
+        programs who have taken a variety of paths to
+        arrive here and who are discovering their own
+        possible every day.</p>
+      <p style="margin-bottom:20px"> <strong>Ready to find your possible?</strong></p>
+
+      <button class="col-xs-12 col-md-4 offset-md-1 btn">Request information</button>
+      <button class="col-xs-12 col-md-4 offset-md-2 btn">Apply to MSU Denver</button>
+
+    </div>
+  </section>
 
 
-<section class="possible-call-to-action">
-
-  <div class="col-xs-12 col-md-10 offset-md-1 well">
-    <h2>Start your <span class="possible-word">possible</span></h2>
-    <p>
-MSU Denver is where classes lead to careers
-and learners connect with leaders. Our
-campus is diverse and welcoming, filled with
-learners in undergraduate and masters’
-programs who have taken a variety of paths to
-arrive here and who are discovering their own
-possible every day.</p>
-<p style="margin-bottom:20px"> <strong>Ready to find your possible?</strong></p>
-
-<button class="col-xs-12 col-sm-6 col-md-4 offset-md-1 btn"> Request information</button> <button class="col-xs-12 col-sm-4 col-md-4 offset-md-2 btn"> Apply to MSU Denver</button>
-
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6 text-center">
+          <img class="img-fluid university-logo-footer" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <h2 class="possible-footer">Reimagine <span class="possible-word">possible</span></h2>
+          <p class="copyright">&copy; 2019 Metropolitan State University of Denver. All Rights reserved.</p>
+        </div>
+      </div>
+    </div>
   </div>
-</section>
-
-
-      <div class="footer">
-        <div class="container">
-      <div class="col-sm-12">
-          <img style="max-width:200px; margin-right: 20vw" class="img-fluid university-logo float-left" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
-            <p class="possible-footer">Reimagine <span class="possible-word">possible</span></p>
-            <p class="copyright">&copy; 2019 Metropolitan State University of Denver. All Rights reserved.</p>
-      </div>
-      </div>
-      </div>
-        <script src="style-assets/lib/jquery/jquery.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js "></script>
-    </body>
+  <script src="style-assets/lib/jquery/jquery.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js "></script>
+</body>
 
 
 <!--
