fixed witdths for mobile and tablet

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -16,15 +16,15 @@
   <section class="introduction">
     <div class="container">
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-sm-12 col-md-12">
           <h1>Reimagine <span class="possible-word fade-in">possible</span></h1>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+        <div class="col-xs-12 col-sm-6 col-md-12 text-center">
           <img class="img-responsive university-logo fade-in hidden-sm" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
         </div>
 
-        <div class="col-xs-12 col-sm-4 offset-col-sm-4 text-center">
-          <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span>
+        <div class="col-xs-12 col-sm-4 offset-col-sm-4 col-md-12 text-center">
+          <a href="#start_your_possible"> <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span></a>
         </div>
       </div>
     </div>
