--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -19,17 +19,17 @@
         <div class="col-xs-12 col-sm-12 col-md-12">
           <h1>Reimagine <span class="possible-word fade-in">possible</span></h1>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-12 text-center">
-          <img class="img-responsive university-logo fade-in hidden-sm" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
+        <div class="col-xs-12 col-sm-6 col-md-2 offset-md-8 text-center">
+          <img class="img-responsive university-logo fade-in" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
         </div>
 
         <div class="col-xs-12 col-sm-4 offset-col-sm-4 col-md-12 text-center">
-          <a href="#start_your_possible"> <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span></a>
+          <a href="#start"> <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span></a>
         </div>
       </div>
     </div>
   </section>
-  <section class="start_your_possible">
+  <section class="start_your_possible" id="start">
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 offset-md-4">
@@ -69,21 +69,24 @@
 
 
   <section class="possible-call-to-action">
-    <div class="col-xs-12 col-md-10 offset-md-1 well">
-      <h2>Start your <span class="possible-word">possible</span></h2>
-      <p>
-        MSU Denver is where classes lead to careers
-        and learners connect with leaders. Our
-        campus is diverse and welcoming, filled with
-        learners in undergraduate and masters’
-        programs who have taken a variety of paths to
-        arrive here and who are discovering their own
-        possible every day.</p>
-      <p style="margin-bottom:20px"> <strong>Ready to find your possible?</strong></p>
-
-      <button class="col-xs-12 col-md-4 offset-md-1 btn">Request information</button>
-      <button class="col-xs-12 col-md-4 offset-md-2 btn">Apply to MSU Denver</button>
-
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 well">
+          <h2>Start your <span class="possible-word">possible</span></h2>
+          <p>
+            MSU Denver is where classes lead to careers
+            and learners connect with leaders. Our
+            campus is diverse and welcoming, filled with
+            learners in undergraduate and masters’
+            programs who have taken a variety of paths to
+            arrive here and who are discovering their own
+            possible every day.</p>
+          <p style="margin-bottom:20px"> <strong>Ready to find your possible?</strong></p>
+          <a href=""><button class="col-xs-12 col-md-5 offset-md-1 btn">Request information</button></a>
+          <a href=""><button class="col-xs-12 col-md-5 btn">Apply to MSU Denver</button></a>
+        </div>
+      </div>
+    </div>
     </div>
   </section>
 
@@ -92,14 +95,19 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-6 text-center">
-          <img class="img-fluid university-logo-footer" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
+          <a href="https://msudenver.edu"><img class="img-fluid university-logo-footer" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg"></a>
         </div>
         <div class="col-sm-12 col-md-6">
           <h2 class="possible-footer">Reimagine <span class="possible-word">possible</span></h2>
-          <p class="copyright">&copy; 2019 Metropolitan State University of Denver. All Rights reserved.</p>
+        </div>
+      </div>
+      <div class="row justify-content-end">
+        <div class="col-sm-12 col-md-8 offset-col-md-4">
+          <p class="copyright">&copy; 2019 <a href="https://msudenver.edu">Metropolitan State University of Denver</a>. All Rights reserved.</p>
         </div>
       </div>
     </div>
+  </div>
   </div>
   <script src="style-assets/lib/jquery/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
