--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -77,7 +77,7 @@
             MSU Denver is where classes lead to careers
             and learners connect with leaders. Our
             campus is diverse and welcoming, filled with
-            learners in undergraduate and masters’
+            learners in undergraduate and master's
             programs who have taken a variety of paths to
             arrive here and who are discovering their own
             possible every day.</p>
