first capitalization on rights reserved

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -166,7 +166,7 @@
       </div>
       <div class="row justify-content-end">
         <div class="col-sm-12 col-md-8 offset-col-md-4">
-          <p class="copyright">&copy; 2019 <a href="https://msudenver.edu">Metropolitan State University of Denver</a>. All Rights reserved.</p>
+          <p class="copyright">&copy; 2019 <a href="https://msudenver.edu">Metropolitan State University of Denver</a>. All rights reserved.</p>
         </div>
       </div>
     </div>
