CSS Updates and Change Request

--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -79,7 +79,7 @@
                         <!-- *********************************  -->
                         <!-- SITEMANAGER HEADER ENDS HERE -->
                         <!-- *********************************  -->
-                        <!-- @@include('content-types-main/page-content.html') -->
+                         @@include('content-types-main/page-content.html')
                         <!-- @@include('content-types-main/facebook-feed.html') -->
                         <!-- @@include('content-types-main/Slideshow-Gallery.html') -->
                         <!-- @@include('content.html') -->
@@ -162,6 +162,31 @@
   </div>
  </div>
 </div>
+</div>
+
+<div class="linkcolumn">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="panel panel-default clickable" data-href="">
+        <div class="panel-heading">Quick Links</div>
+        <div class="panel-body" style="height:100%">
+          <p><a title="PDF 180 KB" href="https://msudenver.edu/media/content/departmentofjournalismamptechnicalcommunication/advising/2016-17/jtc-adv_16-17.pdf" target="_blank" data-toggle="tooltip" data-placement="top">JTC Advising Booklet 2016-17</a></p>
+          <p><a title="PDF 337 KB" href="https://msudenver.edu/media/content/departmentofjournalismamptechnicalcommunication/advising/JTCCourseRotationSchedule2017-18.pdf" target="_blank" data-toggle="tooltip" data-placement="top">JTC Course Rotation 17-18</a></p>
+          <p><a href="http://www.msudenver.edu/academic/online/student/about/index.shtml">New to Online Courses?</a></p>
+          <p><a href="https://msudenver.edu/jtc/resources/scholarships/">Scholarships</a></p>
+          <p><a href="https://msudenver.edu/jtc/resources/workstudypositions/">Work Study Positions</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="well social_well col-xs-12" align="center">
+  <h4 style="text-align: center; margin-top: 0">Connect With Us&zwnj;</h4>
+
+  <a href='https://www.facebook.com/jtcdepartment'><img src='https://adt4apps.msudenver.edu/media/assets/webicons/facebook.png' alt='Facebook'/></a>
+  <a href='https://twitter.com/MSUDenverJTC'><img src='https://adt4apps.msudenver.edu/media/assets/webicons/twitter.png' alt='Twitter'/></a>
+  <a href='http://www.youtube.com/channel/UCyUZh4eAhkDsFapi5SOM_LQ'><img src='https://adt4apps.msudenver.edu/media/assets/webicons/youtube-2.png' alt='YouTube'/></a>
 </div>
 
 </div>
