--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -99,7 +99,7 @@
           <h2>What would you do if anything were <span class="possible-word-reversed">possible</span>?</h2>
         </div>
         <div class="col-xs-12 col-md-8 offset-md-4">
-          <p>Imagine a place where barriers are removed, opportunities are plentiful, labels are nonexistent and an entire community of peers, mentors, educators and industry leaders are ready to support you, encourage you and connect with you.</p>
+          <p>Imagine a place where barriers are removed, opportunities are plentiful, labels are nonexistent and an entire community of peers, mentors, educators and industry leaders is ready to support you, encourage you and connect with you.</p>
         </div>
       </div>
     </div>
@@ -112,12 +112,12 @@
         education.</h2>
       <div class="row">
         <div class="col-xs-12 col-md-6">
-          <p>We offer a dynamic urban setting, and an incredible network of organizations
+          <p>We offer a dynamic urban setting and an incredible network of organizations
             who partner with us, offer internships and recruit
             our graduates. We have degrees in sought-after
-            fields and we’re leading the way across all areas
+            fields, and we’re leading the way across all areas
             of study in excellence, innovation and opportunity.
-            You can even create your own degree, based on
+            You can even create your own degree based on
             your unique passions.
             In the months ahead, visit this page to read our
             stories, be inspired and imagine what could be
