beautifies and cleans up viewbook styles

--- a/www-root/viewbook.html
+++ b/www-root/viewbook.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="initial-scale=1">
-   <title>MSU Denver - Vendor Layout</title>
-   <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
-   <!-- <link rel="stylesheet" href="style-assets/css/vendor-style.css" /> -->
-   <link rel="stylesheet" href="style-assets/css/main-style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1">
+  <title>MSU Denver - viewbook</title>
+  <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
+  <link rel="stylesheet" href="style-assets/css/main-style.css" />
 
 
 </head>
-    <body>
-          <!-- Global Header -->
+
+<body>
+  <!-- Global Header -->
 <a href="#content" class="skip-content">Skip to main content</a>
 <header>
    <div class="navbar-fixed-top ">
@@ -169,7 +170,7 @@ $(window).scroll(function(){
 </script>
 
 
-          <!-- <div class="container">
+  <!-- <div class="container">
   <div class="col-xs-12">
     <h1>This is a Header 1</h1>
     <h2>This is a Header 2</h2>
@@ -179,12 +180,12 @@ $(window).scroll(function(){
   </div>
 </div>
  -->
-          <div>
+  <div>
 <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/283756557?autoplay=1&loop=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
 </div>
 
-          <div class="col-xs-12 infographics-panel">
+  <div class="col-xs-12 infographics-panel">
   <div class="col-xs-12 col-md-4">
     <span>Data</span>
     <span>graphic</span>
@@ -223,7 +224,7 @@ $(window).scroll(function(){
 
 </div>
 
-          <section style="">
+  <section style="">
 
 
 
@@ -306,8 +307,7 @@ $(window).scroll(function(){
 </section>
 
 
-
-          <section class="admissionsHomepage admissionsHomepageResources">
+  <section class="admissionsHomepage admissionsHomepageResources">
 	<div class="container" style="padding-bottom: 10px;">
 		<div class="col-xs-12">
 			<h2 class="fancy"><span>Resources</span></h2>
@@ -360,7 +360,7 @@ $(window).scroll(function(){
 </section>
 
 
-        <!-- ** Site wide footer ** -->
+  <!-- ** Site wide footer ** -->
 
     <footer>
     <!-- footer-bg-mob -->
@@ -475,10 +475,10 @@ $(window).scroll(function(){
     </div>
     </footer>
 
-        <script src="style-assets/lib/jquery/jquery.min.js"></script>
-        <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
-        <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
+  <script src="style-assets/lib/jquery/jquery.min.js"></script>
+  <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
+  <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
 
-    </body>
+</body>
 
 </html>
