--- a/development/terminalfour/src/html/viewbook.html
+++ b/development/terminalfour/src/html/viewbook.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="initial-scale=1">
-   <title>MSU Denver - Vendor Layout</title>
-   <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
-   <!-- <link rel="stylesheet" href="style-assets/css/vendor-style.css" /> -->
-   <link rel="stylesheet" href="style-assets/css/main-style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1">
+  <title>MSU Denver - viewbook</title>
+  <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
+  <link rel="stylesheet" href="style-assets/css/main-style.css" />
 
 
 </head>
-    <body>
-          @@include('header.html')
 
-          <!-- @@include('paragraph-styles.html') -->
-          @@include('viewbook/hero-video.html')
-          @@include('viewbook/infographics-panel.html')
-          @@include('viewbook/background-panel.html')
+<body>
+  @@include('header.html')
 
+  <!-- @@include('paragraph-styles.html') -->
+  @@include('viewbook/hero-video.html')
+  @@include('viewbook/infographics-panel.html')
+  @@include('viewbook/background-panel.html')
 
-          @@include('admissionsHomepageIncludes/admissionsHomepageResources.html')
+  @@include('admissionsHomepageIncludes/admissionsHomepageResources.html')
 
-        @@include('footer.html')
-        <script src="style-assets/lib/jquery/jquery.min.js"></script>
-        <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
-        <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
+  @@include('footer.html')
+  <script src="style-assets/lib/jquery/jquery.min.js"></script>
+  <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
+  <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
 
-    </body>
+</body>
 
 </html>
