adds t4 tags and optimized images for possible

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -25,6 +25,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="style-assets/css/possible.css" />
 
+  <!-- <t4 type='media' id='172853' formatter='image/path'/> background section
+<t4 type='media' id='172852' formatter='image/path'/> Pride photo
+<t4 type='media' id='117285' formatter='image/path'/> Logo
+
+ -->
+
   <!-- google analytics -->
   <!-- GTM fireGtm variable -->
   <script type="text/javascript">
@@ -145,8 +151,8 @@
             arrive here and who are discovering their own
             possible every day.</p>
           <p style="margin-bottom:20px"> <strong>Ready to find your possible?</strong></p>
-          <a href=""><button class="col-xs-12 col-md-5 offset-md-1 btn">Request information</button></a>
-          <a href=""><button class="col-xs-12 col-md-5 btn">Apply to MSU Denver</button></a>
+          <a href="https://connect.msudenver.edu/register/requestinformation" target="_blank"><button class="col-xs-12 col-md-5 offset-md-1 btn">Request information</button></a>
+          <a href="/apply" target="_blank"><button class="col-xs-12 col-md-5 btn">Apply to MSU Denver</button></a>
         </div>
       </div>
     </div>
