Added CSS fixes on 2 column layout

--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -142,26 +142,26 @@
 </div>
 <div class="linkcolumn">
    <t4 type='navigation' id='104' />
-   <a role="button" class="btn btn-lg custombtn rowdyred col-xs-12" href="/brandcentral/shareyourstory/"  >
-<span  style="float:left;" ><span></span>SHARE YOUR STORY
-</span>
-</a><!-- linkcol -->
-<a role="button" class="btn btn-lg custombtn rowdyblue col-xs-12" href="/events/"  >
-<span  style="float:left;" ><span></span>EVENTS CALENDAR
-</span>
-</a><div class="well col-xs-12">
-</div><div class="row">
-<div class="col-xs-12">
-<div class="panel panel-default clickable" data-href="">
-  <div class="panel-heading">Media Contact:</div>
-    <div class="panel-body" style="height:100%">
-      <p>Tim Carroll, APR<br />Assistant Director of Media Relations<br />303-556-5136<br /><a href="mailto:carrollt@msudenver.edu">carrollt@msudenver.edu</a></p>
-<p>Julie Lucas<br />Senior Director of Integrated Marketing and Communications<br />303-352-7390<br /><a href="mailto:jlucas13@msudenver.edu">jlucas13@msudenver.edu</a></p>
-<p>Cathy Lucas, APR<br />Associate to the President for Marketing and Communications,&nbsp;<br />Chief of Staff&nbsp;<br />303-556-5131<br /><a href="mailto:lucascat@msudenver.edu">lucascat@msudenver.edu</a></p>
+   <a role="button" class="btn btn-lg custom-red-btn col-xs-12" href="/brandcentral/shareyourstory/"  >
+     SHARE YOUR STORY
+  </a><!-- linkcol -->
+  <a role="button" class="btn btn-lg custom-blue-btn col-xs-12" href="/events/"  >
+    EVENTS CALENDAR
+  </a>
+  <div class="well col-xs-12">
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="panel panel-default clickable" data-href="">
+        <div class="panel-heading">Media Contact:</div>
+        <div class="panel-body" style="height:100%">
+          <p>Tim Carroll, APR<br />Assistant Director of Media Relations<br />303-556-5136<br /><a href="mailto:carrollt@msudenver.edu">carrollt@msudenver.edu</a></p>
+          <p>Julie Lucas<br />Senior Director of Integrated Marketing and Communications<br />303-352-7390<br /><a href="mailto:jlucas13@msudenver.edu">jlucas13@msudenver.edu</a></p>
+          <p>Cathy Lucas, APR<br />Associate to the President for Marketing and Communications,&nbsp;<br />Chief of Staff&nbsp;<br />303-556-5131<br /><a href="mailto:lucascat@msudenver.edu">lucascat@msudenver.edu</a></p>
+        </div>
+      </div>
     </div>
   </div>
- </div>
-</div>
 </div>
 
 <div class="linkcolumn">
@@ -289,9 +289,9 @@ lhnWin=window.open('http://chat.msudenver.edu/lhn/livechatvisitor.aspx?lhnid=294
             $(".header-fluid").removeClass("header-fluid-change");
             $(".msudenver_logo").removeClass("msudenver_logo_change");
             if( position <= 15 && width> width_threshold) {
-              $("a.btn.btn-default.visit-give-mobile").css("top", "-144px");
-              $("a.btn.btn-default.give-mobile").css("top", "-144px");
-              $("a.btn.btn-default.apply-mobile").css("top", "-144px");
+              $("a.btn.btn-default.visit-give-mobile").css("top", "-132px");
+              $("a.btn.btn-default.give-mobile").css("top", "-132px");
+              $("a.btn.btn-default.apply-mobile").css("top", "-132px");
               }
               if( position > 15 && width > width_threshold) {
               $(".header-fluid").toggleClass("header-fluid-change");
