--- a/www-root/2column.html
+++ b/www-root/2column.html
@@ -942,44 +942,6 @@ $(window).scroll(function(){
   </div>
 </div>
 
-<div class="col-xs-12">
-  <div class="panel panel-default panel-slide">
-    <div class="panel-heading">
-      <a data-toggle="collapse" href="#slide-down-panel">
-        <h4 class="panel-title">
-          Slide Down Panel
-          <i class="fa fa-chevron-down pull-right"></i>
-        </h4>
-      </a>
-    </div>
-    <div id="slide-down-panel" class="panel-collapse collapse">
-      <div class="panel-body">
-        <div class="content-inner">
-          <div class="content-img">
-            <img src='https://adt4apps.msudenver.edu/media/marketingandcommunications/academicprograms/images/Journalism_BA-Baum_Michelle-Chase.jpg' alt='Michelle Chase Baum_Journalism' style=''/>
-          </div>
-
-          <div class="content-words">
-            <h3>Marissa Molina</h3>
-            <h4>Trustee</h4>
-
-            <hr>
-
-            <p>Marissa Molina was appointed to the MSU Denver Board of
-              Trustees in 2019.</p>
-            <p>She is the chair of the Governance Committee. Marissa also
-              serves on the Finance Committee and is the MSU Denver
-              representative to the MSU Denver Foundation Board.</p>
-          </div>
-        </div>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi turpis, ultricies eu tortor quis, suscipit tempor leo. Nunc eget sem vestibulum, volutpat lorem ac, vehicula nibh. Vivamus ut luctus lacus. Aliquam fermentum in nulla eu ornare. Integer at tellus pharetra, fermentum quam vitae, bibendum nibh. Mauris aliquam sagittis nisl malesuada tempus. Aenean vulputate id lorem nec congue. Nunc in imperdiet eros. Nam gravida vel sem imperdiet dictum. Nam elementum urna sit amet tristique molestie. Duis mattis vel est vitae iaculis. Vestibulum auctor condimentum lobortis. Integer id justo fermentum est ornare lacinia quis et quam. Curabitur convallis efficitur ex id posuere.</p>
-      </div>
-    </div>
-
-  </div>
-</div>
-
 <!-- Original Buttons -->
 <!--<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " id='161876'>-->
 <!--  <a role="button" class="btn btn-lg custombtn " href="/tst/experts-refresh/allexperts/" target="_blank" >-->
@@ -1125,6 +1087,33 @@ $(window).scroll(function(){
     height: 250px;
   }
 </style>
+
+<div class="col-xs-12">
+  <div class="panel panel-default panel-profile-board">
+    <div class="panel-body">
+      <div class="content-inner">
+        <div class="content-img">
+          <img src='https://adt4apps.msudenver.edu/media/marketingandcommunications/academicprograms/images/Journalism_BA-Baum_Michelle-Chase.jpg' alt='Michelle Chase Baum_Journalism' style=''/>
+        </div>
+
+        <div class="content-words">
+          <h3>Marissa Molina</h3>
+          <h4>Trustee</h4>
+
+          <hr>
+
+          <p>Marissa Molina was appointed to the MSU Denver Board of
+            Trustees in 2019.</p>
+          <p>She is the chair of the Governance Committee. Marissa also
+            serves on the Finance Committee and is the MSU Denver
+            representative to the MSU Denver Foundation Board.</p>
+        </div>
+      </div>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi turpis, ultricies eu tortor quis, suscipit tempor leo. Nunc eget sem vestibulum, volutpat lorem ac, vehicula nibh. Vivamus ut luctus lacus. Aliquam fermentum in nulla eu ornare. Integer at tellus pharetra, fermentum quam vitae, bibendum nibh. Mauris aliquam sagittis nisl malesuada tempus. Aenean vulputate id lorem nec congue. Nunc in imperdiet eros. Nam gravida vel sem imperdiet dictum. Nam elementum urna sit amet tristique molestie. Duis mattis vel est vitae iaculis. Vestibulum auctor condimentum lobortis. Integer id justo fermentum est ornare lacinia quis et quam. Curabitur convallis efficitur ex id posuere.</p>
+    </div>
+  </div>
+</div>
 
 <div class="col-xs-12 contact-form content-inner">
   <h2>
@@ -1355,26 +1344,26 @@ $(window).scroll(function(){
 </div>
 <div class="linkcolumn">
    <t4 type='navigation' id='104' />
-   <a role="button" class="btn btn-lg custombtn rowdyred col-xs-12" href="/brandcentral/shareyourstory/"  >
-<span  style="float:left;" ><span></span>SHARE YOUR STORY
-</span>
-</a><!-- linkcol -->
-<a role="button" class="btn btn-lg custombtn rowdyblue col-xs-12" href="/events/"  >
-<span  style="float:left;" ><span></span>EVENTS CALENDAR
-</span>
-</a><div class="well col-xs-12">
-</div><div class="row">
-<div class="col-xs-12">
-<div class="panel panel-default clickable" data-href="">
-  <div class="panel-heading">Media Contact:</div>
-    <div class="panel-body" style="height:100%">
-      <p>Tim Carroll, APR<br />Assistant Director of Media Relations<br />303-556-5136<br /><a href="mailto:carrollt@msudenver.edu">carrollt@msudenver.edu</a></p>
-<p>Julie Lucas<br />Senior Director of Integrated Marketing and Communications<br />303-352-7390<br /><a href="mailto:jlucas13@msudenver.edu">jlucas13@msudenver.edu</a></p>
-<p>Cathy Lucas, APR<br />Associate to the President for Marketing and Communications,&nbsp;<br />Chief of Staff&nbsp;<br />303-556-5131<br /><a href="mailto:lucascat@msudenver.edu">lucascat@msudenver.edu</a></p>
+   <a role="button" class="btn btn-lg custom-red-btn col-xs-12" href="/brandcentral/shareyourstory/"  >
+     SHARE YOUR STORY
+  </a><!-- linkcol -->
+  <a role="button" class="btn btn-lg custom-blue-btn col-xs-12" href="/events/"  >
+    EVENTS CALENDAR
+  </a>
+  <div class="well col-xs-12">
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="panel panel-default clickable" data-href="">
+        <div class="panel-heading">Media Contact:</div>
+        <div class="panel-body" style="height:100%">
+          <p>Tim Carroll, APR<br />Assistant Director of Media Relations<br />303-556-5136<br /><a href="mailto:carrollt@msudenver.edu">carrollt@msudenver.edu</a></p>
+          <p>Julie Lucas<br />Senior Director of Integrated Marketing and Communications<br />303-352-7390<br /><a href="mailto:jlucas13@msudenver.edu">jlucas13@msudenver.edu</a></p>
+          <p>Cathy Lucas, APR<br />Associate to the President for Marketing and Communications,&nbsp;<br />Chief of Staff&nbsp;<br />303-556-5131<br /><a href="mailto:lucascat@msudenver.edu">lucascat@msudenver.edu</a></p>
+        </div>
+      </div>
     </div>
   </div>
- </div>
-</div>
 </div>
 
 <div class="linkcolumn">
@@ -1620,9 +1609,9 @@ lhnWin=window.open('http://chat.msudenver.edu/lhn/livechatvisitor.aspx?lhnid=294
             $(".header-fluid").removeClass("header-fluid-change");
             $(".msudenver_logo").removeClass("msudenver_logo_change");
             if( position <= 15 && width> width_threshold) {
-              $("a.btn.btn-default.visit-give-mobile").css("top", "-144px");
-              $("a.btn.btn-default.give-mobile").css("top", "-144px");
-              $("a.btn.btn-default.apply-mobile").css("top", "-144px");
+              $("a.btn.btn-default.visit-give-mobile").css("top", "-132px");
+              $("a.btn.btn-default.give-mobile").css("top", "-132px");
+              $("a.btn.btn-default.apply-mobile").css("top", "-132px");
               }
               if( position > 15 && width > width_threshold) {
               $(".header-fluid").toggleClass("header-fluid-change");
