added video-hero content-type

--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -69,7 +69,8 @@
     <div class="container-fluid" id="content">
         <div class="row">
           @@include('site-header.html') 
-          @@include('content-types-main/page-hero.html')
+          <!-- @@include('content-types-main/page-hero.html') -->
+          @@include('content-types-main/video-hero.html')
 
             <!-- BEGINS HERO IMAGE -->
               <div class="row">
