--- a/www-root/2column.html
+++ b/www-root/2column.html
@@ -235,14 +235,34 @@ $(window).scroll(function(){
     </div>
 <!-- ENDS BREADCRUMBS + SITEHEADER -->
  
-          <div class="row">
+          <!-- <div class="row">
   <div class="col-xs-12 hero">
   <img class="img-responsive" src="http://msudenver.edu/media/content/departmentofjournalismamptechnicalcommunication/images/JTC-Hero-v2.jpg" alt="work study help desk" style="   " />
     <div class="hero-caption"><h3>Body of Page Hero Image Content Type</h3>
   <p>Praesent mauris. Fusce nec tellus sed augue semper porta.</p></div>
   </div>
 </div>
-
+ -->
+          <div class="row">
+    <div class="col-xs-12 hero">
+        <video class="video-responsive" muted='true' loop='true' autoplay='true'>
+            <source src="http://127.0.0.1:8887/Drone_for_web_2.mp4" type='video/mp4'/>
+        </video>
+        <div class="hero-caption"><h3>Body of Page Hero Image Content Type</h3>
+            <p>Praesent mauris. Fusce nec tellus sed augue semper porta.</p></div>
+        </div>
+    </div>
+  
+<style type=text/css> 
+video {
+    margin-bottom: 0px;
+    width:100%
+}
+/* .hero > .img-responsive {
+  margin-bottom: 0px;
+  width:100%
+} */
+</style>
 
             <!-- BEGINS HERO IMAGE -->
               <div class="row">
